src/test/ui/pub/pub-restricted-error-fn.rs
pub(crate) () fn foo() {}
//~^ ERROR visibility `pub(crate)` is not followed by an item
//~| ERROR statements cannot reside in modules
//~| ERROR `main` function not found
